# boozy-db

./: .gitignore  CLAUDE.md  LICENSE  LICENSE.md  README.md  activate.ps1  pyproject.toml  unused_v4_uuids.txt
data/images/: coupe-glass-x.txt  flute-glass.txt  julep-cup.txt  martini-glass.txt  mug-glass.txt  stone-glass.txt  wine-glass.txt
data/recipes/: 0284fb77-9f42-4e1c-ac67-42e93f973477.json  06c74cd7-1038-4679-8856-bc46ad3e9949.json  0ab79731-2a12-4f1b-8081-d44f0a6bf1e8.json  0cffacc2-08a7-4ff7-8cab-775ff2ce5ca0.json  0dd7904f-7a47-45c6-b414-c24753d1f0df.json  0f352c42-858e-430a-bfa1-df41b2b2bae2.json  127ccc63-0309-4cc1-9aaa-0416e06414a9.json  18f5aac3-38b0-4a73-8f9a-dca684eb7021.json  1ad4a3b9-d7ed-4624-96fb-84cc8f86596a.json  1b322f1e-cdf3-4797-a030-75863bf1fd05.json  1d81688c-8358-48df-b78e-383bb9784293.json  1e8f71aa-427c-4416-a901-ae82e206b3bc.json  24b74432-07da-4cd4-9653-203ca13d9e53.json  27945fbd-4289-4728-ae36-40a23ff28fde.json  28fc81e9-d3a5-4218-b5e0-98b317e50e98.json  2d766dc4-f914-4551-b67d-8ae70ffaef96.json  2f0f337e-6a89-4e73-8b5b-b17fbbaa6e17.json  3053325a-0919-4f1f-beb1-a6815a6189b2.json  316d6311-cfdd-4813-a6b7-29beb49a3532.json  320ef2b7-d0dc-4839-a418-53ee638d44a6.json  3228d43d-10e4-4471-b11a-548291ade39d.json  36e7a0ed-6214-48cc-b2e6-cff411629337.json  38fa048c-71da-4a36-bb77-d75f1cbd2f8d.json  3a361246-537b-4b52-bda1-22657374ed6a.json  3a5a3949-927a-4eaf-ac82-e16a0b87d06a.json  3bf63142-a425-463b-9a22-5a5d9ba092db.json  (+79 more)
src/boozydb/: cli.py  models.py  (+3 more)
tests/: test_models.py  test_query.py  test_storage.py
web/: README.md  app.py
(+17 files in other folders)
