[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "drinkcatalog"
version = "0.1.0"
description = "CLI-first catalog for alcoholic drink recipes (JSON-backed)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
]

[project.scripts]
drinkcat = "drinkcatalog.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/drinkcatalog"]
