[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "boozydb"
version = "0.1.0"
description = "BoozyDB is a CLI-first catalog for alcoholic drink recipes (JSON-backed)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "Surge_Tech" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
]

[project.scripts]
boozydb = "boozydb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/boozydb"]